[package]
name = "impl-leetcode-for-rust"
version = "0.1.0"
authors = ["Geng Teng <me@gteng.org>"]
description = "LeetCode Solutions in Rust"
readme = "README.md"
keywords = ["leetcode", "rust"]
repository = "https://github.com/gengteng/impl-leetcode-for-rust.git"
license = "MIT"
edition = "2018"


[dependencies]
regex = "1"